Your First Post Request & doPost Method

--- a/spring-mvc/src/main/webapp/WEB-INF/web.xml
+++ b/spring-mvc/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 	<display-name>To do List</display-name>
 
 	<welcome-file-list>
-		<welcome-file>welcome</welcome-file>
+		<welcome-file>login</welcome-file>
 	</welcome-file-list>
 
 </web-app>
