--- a/spring-mvc/pom.xml
+++ b/spring-mvc/pom.xml
@@ -20,6 +20,12 @@
 			<version>5.1.7.RELEASE</version>
 		</dependency>
 
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+
 
 	</dependencies>
 
